src/objects/AcctSeed__Billing_Cash_Receipt__c.object
<CustomObject>
    <description>Used to document the relationship a billing record has with a cash receipt record. A billing cash receipt record is created during the cash application process.</description>
    <fields>
        <fullName>AcctSeed__Accounting_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to specify accounting period for financial reporting.</inlineHelpText>
        <label>Applied Accounting Period</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The accounting period status must be &quot;Open&quot;</errorMessage>
            <filterItems>
                <field>AcctSeed__Accounting_Period__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <infoMessage>The accounting period status must be open</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Period__c</referenceTo>
        <relationshipLabel>Billing Cash Receipts</relationshipLabel>
        <relationshipName>Billing_Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Adjustment_Amount__c</fullName>
        <inlineHelpText>Amount adjusted in the cash application process. Typically a write off of a billing balance or payment discount.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Adjustment_GL_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>GL accounts used to account for adjustments.</inlineHelpText>
        <label>Adjustment GL Account</label>
        <referenceTo>AcctSeed__GL_Account__c</referenceTo>
        <relationshipLabel>Billing Cash Receipts</relationshipLabel>
        <relationshipName>Billing_Cash_Receipts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Applied_Amount__c</fullName>
        <inlineHelpText>Amount of Cash Receipt Applied to this billing</inlineHelpText>
        <label>Applied Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Applied_Date__c</fullName>
        <inlineHelpText>Used to specify the applied date for financial reporting.</inlineHelpText>
        <label>Applied Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Billing__c</fullName>
        <label>Billing</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>AcctSeed__Billing__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Posted</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Billing__c</referenceTo>
        <relationshipLabel>Applied Cash Receipts</relationshipLabel>
        <relationshipName>Billing_Cash_Receipts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Cash_Receipt__c</fullName>
        <inlineHelpText>Amount adjusted in the cash application process. Typically a write off of a billing balance or payment discount.</inlineHelpText>
        <label>Cash Receipt</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Cash_Receipt__c.AcctSeed__Status__c</field>
                <operation>equals</operation>
                <value>Posted</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Cash_Receipt__c</referenceTo>
        <relationshipLabel>Billings Applied To</relationshipLabel>
        <relationshipName>Billing_Cash_Receipts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Period_Applied__c</fullName>
        <formula>IF(ISBLANK(AcctSeed__Accounting_Period__c),AcctSeed__Cash_Receipt__r.AcctSeed__Accounting_Period__r.Name, AcctSeed__Accounting_Period__r.Name)</formula>
        <label>Period Applied</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcctSeed__Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                    <default>true</default>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Billing Cash Receipt</label>
    <nameField>
        <displayFormat>BCR-{00000}</displayFormat>
        <label>Billing Cash Receipt Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Cash Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Accounting_Period_Is_Required</fullName>
        <active>false</active>
        <description>A billing cash receipt must contain a value for the accounting period field.</description>
        <errorConditionFormula>ISBLANK(AcctSeed__Accounting_Period__c)</errorConditionFormula>
        <errorDisplayField>AcctSeed__Accounting_Period__c</errorDisplayField>
        <errorMessage>A billing cash receipt must contain a value for the accounting period field.</errorMessage>
    </validationRules>
</CustomObject>